# discord_bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SYSTEM_DESIGN.md  check_db_status.py  docker-compose.yml  fly.toml  main.py  requirements.txt  restore_weekly_scores.py  system設計書2.md  test_storage_fix.py  verify_weekly_logic.py
comm0ns_cpp_tui/: CMakeLists.txt  README.md  TUI_GUIDE.md
comm0ns_cpp_tui/src/: main.cpp
migrations/: 001_initial_schema.sql  002_analytics_views.sql  003_channels_table.sql  004_bot_metadata.sql  005_fix_reset_function_safety.sql
src/: __init__.py  bot.py  config.py  database.py  nlp_analyzer.py  scoring.py  storage.py  tui_auth.py
tools/: c0top  dashboard_cli.py  import_history.py  recalc_scores.py
web/: README.md
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/behavior/: page.tsx
web/src/app/channels/: page.tsx
web/src/app/engagement/graph/: page.tsx
web/src/app/engagement/leaderboard/: page.tsx
web/src/components/ui/: app-sidebar.tsx
